--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -48,7 +48,7 @@
 
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         profile=portraits/Glauco.png
         unrenamable=yes
         canrecruit=yes
@@ -105,7 +105,7 @@
 
         type=Orcish Warrior
         id=Grunto
-        name="Grunto"
+        name=_"Grunto"
         unrenamable=yes
         canrecruit=yes
         x,y=20,1
@@ -129,7 +129,7 @@
 
         type=Bandit
         id=Dadoc
-        name="Dadoc"
+        name=_"Dadoc"
         unrenamable=yes
         canrecruit=yes
         x,y=34,20
@@ -163,10 +163,10 @@
             [/gold_carryover]
         [/objectives]
 
-        {NAMED_LOYAL_UNIT 1 (Bowman) 15 17 (Titus) ("Titus")}
-        {NAMED_LOYAL_UNIT 1 (Spearman) 23 18 (Caius) ("Caius")}
-        {NAMED_LOYAL_UNIT 1 (Spearman) 17 21 (Sempronius) ("Sempronius")}
-        {NAMED_LOYAL_UNIT 1 (Bowman) 21 23 (Pretonius) ("Petronius")}
+        {NAMED_LOYAL_UNIT 1 (Bowman) 15 17 (Titus) (_"Titus")}
+        {NAMED_LOYAL_UNIT 1 (Spearman) 23 18 (Caius) (_"Caius")}
+        {NAMED_LOYAL_UNIT 1 (Spearman) 17 21 (Sempronius) (_"Sempronius")}
+        {NAMED_LOYAL_UNIT 1 (Bowman) 21 23 (Pretonius) (_"Petronius")}
 
 #define FACING_S
     [+unit]
@@ -253,7 +253,7 @@
             type=Cavalryman
 #endif
             id=Geobard
-            name="Geobard"
+            name=_"Geobard"
             unrenamable=yes
             profile=portraits/Geobard.png
             side=1
