--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -29,7 +29,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -47,7 +47,7 @@
         side=2
         type=Bandit
         id=Dadoc
-        name="Dadoc"
+        name=_"Dadoc"
         unrenamable=yes
         canrecruit=yes
         controller=ai
@@ -262,7 +262,7 @@
         [unit]
             type=Trapper
             id=Divaid
-            name="Divaid"
+            name=_"Divaid"
             side=1
             x,y=10,4
             facing=nw
@@ -285,7 +285,7 @@
         [unit]
             type=Gryphon
             id=Ranfy
-            name="Ranfy"
+            name=_"Ranfy"
             side=1
             x,y=10,3
             facing=sw
