--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -33,7 +33,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -50,7 +50,7 @@
         controller=ai
         type=Orcish Warrior
         id=Grunto
-        name="Grunto"
+        name=_"Grunto"
         unrenamable=yes
         canrecruit=yes
         recruit=Orcish Archer,Orcish Grunt,Goblin Spearman,Wolf Rider
@@ -98,12 +98,12 @@
         {PLACE_IMAGE "orcish-flag-green.png" 21 5}
         {PLACE_IMAGE "items/burial.png" 23 7}
 
-        {NAMED_GENERIC_UNIT 1 (Bowman) 8 18 (Perticus) ("Perticus")}
-        {NAMED_GENERIC_UNIT 1 (Spearman) 9 19 (Palocro) ("Paroclo")}
-        {NAMED_GENERIC_UNIT 1 (Bowman) 10 19 (Octavio) ("Octavio")}
-        {NAMED_GENERIC_UNIT 1 (Spearman) 11 20 (Geruntius) ("Geruntius")}
-        {NAMED_GENERIC_UNIT 1 (Bowman) 12 20 (Virgulio) ("Virgulio")}
-        {NAMED_GENERIC_UNIT 1 (Spearman) 13 21 (Closofeo) ("Closofeo")}
+        {NAMED_GENERIC_UNIT 1 (Bowman) 8 18 (Perticus) (_"Perticus")}
+        {NAMED_GENERIC_UNIT 1 (Spearman) 9 19 (Palocro) (_"Paroclo")}
+        {NAMED_GENERIC_UNIT 1 (Bowman) 10 19 (Octavio) (_"Octavio")}
+        {NAMED_GENERIC_UNIT 1 (Spearman) 11 20 (Geruntius) (_"Geruntius")}
+        {NAMED_GENERIC_UNIT 1 (Bowman) 12 20 (Virgulio) (_"Virgulio")}
+        {NAMED_GENERIC_UNIT 1 (Spearman) 13 21 (Closofeo) (_"Closofeo")}
 #ifdef EASY
         {LOYAL_UNIT 1 (Longbowman) 10 20 }
         {LOYAL_UNIT 1 (Spearman) 11 21 }
@@ -113,7 +113,7 @@
         {GENERIC_UNIT 1 (Spearman) 11 21 }
 #endif
 
-        {NAMED_LOYAL_UNIT 2 (Goblin Spearman) 26 3 (Olly) ("Olly")}
+        {NAMED_LOYAL_UNIT 2 (Goblin Spearman) 26 3 (Olly) (_"Olly")}
     [/event]
 
     [event]
@@ -192,7 +192,7 @@
         [unit]
             type=Trapper
             id=Croquet
-            name="Croquet"
+            name=_"Croquet"
             side=1
             x=16
             y=24
@@ -214,7 +214,7 @@
         [unit]
             type=Great Wolf
             id=Fangy
-            name="Fangy"
+            name=_"Fangy"
             side=1
             x=17
             y=24
