--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -33,7 +33,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -51,7 +51,7 @@
         type=Naga Myrmidon
         # wmllint: directory spellings Kssihiss
         id=Kssihiss
-        name="Kssihiss"
+        name=_"Kssihiss"
         controller=ai
         canrecruit=yes
         recruit=Naga Fighter,Naga Warrior,Naga Hunter,Naga Guardian,Naga Dirkfang
@@ -95,14 +95,14 @@
         type=EXI_Ogregreat
         # wmllint: directory spellings Glubtrub
         id=Glubtrub
-        name="Glubtrub"
+        name=_"Glubtrub"
         controller=ai
         canrecruit=yes
         recruit=Young Ogre,She Ogre
         x,y=22,20
         {GOLD 60 40 20}
         [ai]
-            grouping=yes
+            grouping=defensive
             aggression={ON_DIFFICULTY 0.2 0.3 0.4}
             caution={ON_DIFFICULTY 0.45 0.35 0.25}
             leader_value={ON_DIFFICULTY 1 2 3}
