--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -27,7 +27,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -146,9 +146,7 @@
 #endif
         [/delay]
         [scroll_to_unit]
-            [filter]
-                id=Glauco
-            [/filter]
+            id=Glauco
         [/scroll_to_unit]
     [/event]
 
@@ -341,7 +339,7 @@
             # Since a unit with berserk is a terrible matchup against all the bats, I've tried to give him something to counteract their "drain" ability;
             # see the object below:
             type=Dwarvish Berserker
-            name="Mimord"
+            name=_"Mimord"
             unrenamable=yes
             x,y=$x_dwarf,$y_dwarf
             [modifications]
