--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -25,7 +25,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -42,7 +42,7 @@
         side=2
         type=Saurian Flanker
         id=Giksy
-        name="Giksy"
+        name=_"Giksy"
         profile=portraits/Giksy.png
         unrenamable=yes
         controller=ai
@@ -91,7 +91,7 @@
         side=3
         type=Merman Triton
         id=Joralda
-        name="Joralda"
+        name=_"Joralda"
         unrenamable=yes
         profile=portraits/Joralda.png
         controller=ai
