--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -75,7 +75,7 @@
         side=1
         type=Sergeant
         id=Glauco
-        name="Glauco"
+        name=_"Glauco"
         unrenamable=yes
         canrecruit=yes
         controller=human
@@ -96,7 +96,7 @@
         side=2
         type=Orcish Warlord
         id=Gan-Tarkas
-        name="Gan-Tarkas"
+        name=_"Gan-Tarkas"
         unrenamable=yes
         canrecruit=yes
         recruit=Orcish Archer,Orcish Grunt,Orcish Assassin,Orcish Crossbowman,Orcish Slayer,Orcish Warrior,Goblin Knight,Goblin Pillager,Wolf Rider
@@ -153,19 +153,19 @@
 #enddef
 
 #ifdef HARD
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 17 4 (Trug) ("Trug")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 17 6 (Bolg) ("Bolg")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 20 5 (Snak) ("Snak")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 23 6 (Zagr) ("Zagr")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 26 4 (Lugh) ("Lugh")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 27 6 (Beri) ("Beri")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 17 4 (Trug) (_"Trug")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 17 6 (Bolg) (_"Bolg")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 20 5 (Snak) (_"Snak")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 23 6 (Zagr) (_"Zagr")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 26 4 (Lugh) (_"Lugh")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 27 6 (Beri) (_"Beri")} {FACING_S}
 #else
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 17 4 (Trug) ("Trug")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 17 6 (Bolg) ("Bolg")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 20 5 (Snak) ("Snak")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 23 6 (Zagr) ("Zagr")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 26 4 (Lugh) ("Lugh")} {FACING_S}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 27 6 (Beri) ("Beri")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 17 4 (Trug) (_"Trug")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 17 6 (Bolg) (_"Bolg")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 20 5 (Snak) (_"Snak")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 23 6 (Zagr) (_"Zagr")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 26 4 (Lugh) (_"Lugh")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 27 6 (Beri) (_"Beri")} {FACING_S}
 #endif
 
 #undef FACING_S
@@ -433,7 +433,7 @@
         [unit]
             type=Naga Myrmidon
             id=Hisskss
-            name="Hisskss"
+            name=_"Hisskss"
             side=3
             canrecruit=yes
             x,y=32,12
