--- a/_main.cfg
+++ b/_main.cfg
@@ -2,6 +2,7 @@
 
 [textdomain]
     name="wesnoth-ala"
+    # https://github.com/wesnoth/wesnoth/issues/7817
     path="data/add-ons/A_Little_Adventure/translations"
 [/textdomain]
 
@@ -40,7 +41,7 @@
         description= _"Difficult"
     [/difficulty]
 
-    # wmllint: general spellings Wesnothian
+    # wmllint: general spellings Wesnothian merfolk
     #po: the "young Wesnothian army officer" is Glauco (male); the "he" refers to him:
     description= _ "A young Wesnothian army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly he will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
 	
