1 additional translation note
follow-up on something that came up when reviewing @k-konami's PR #42

--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -433,6 +433,7 @@
         [unit]
             type=Naga Myrmidon
             id=Hisskss
+            #po: name of a Naga Myrmidon unit (note the "k"):
             name=_"Hisskss"
             side=3
             canrecruit=yes
