New Matronly Ogre portrait
from mells/ohlyf/OneHourLate

--- a/_main.cfg
+++ b/_main.cfg
@@ -81,7 +81,7 @@
     [/about]
 
     [about]
-        title = _ "She-Ogre portrait"
+        title = _ "She-Ogre and Matronly Ogre portraits"
         [entry]
             name = "Mells (ohlyf)"
         [/entry]
