add some additional translation notes

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -458,6 +458,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        #po: again, "Wetspot" is Glubtrub's ogre-ish way of mispronouncing "Wesnoth":
         message= _ "More better! To like more to eat and to sleep than to fight! But... how to be enemies of Wetspot? Be edible?"
     [/message]
     [message]
@@ -467,6 +468,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        #po: "OH OH OH!" might actually be better as "HO HO HO!" to indicate laughter, but that style of laughing is usually reserved for Santa Claus in English:
         message= _ "...to understand... nothing! But more better so, I not used to understand things, OH OH OH! We to do so, you to say me who is enemy of Wetspot, and I to squash him!"
     [/message]
     [message]
@@ -555,6 +557,7 @@
 #define 04_GLUBTRUB_AND_BAT
     [message]
         speaker=Glubtrub
+        #po: I am actually not quite sure what Glubtrub means by "Urca"; it could just be a sound of exclamation, like "Urk!" or "Ack!" or something:
         message= _ "Urca! Bats ugly, Glubtrub to hate bats!"
     [/message]
     [message]
@@ -708,6 +711,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        #po: "work with belly" = eat:
         message= _ "Very much true! Stop to work with arms! Now to work with belly! Oh! Oh! Oh!"
     [/message]
 #enddef
