run `wmllint` for 1.18

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -19,19 +19,19 @@
     [story]
         [part]
             {SCENARIO_01_STORY_01}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
         [part]
             {SCENARIO_01_STORY_02}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
         [part]
             {SCENARIO_01_STORY_03}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
         [part]
             {SCENARIO_01_STORY_04}
-            background=story/landscape-plain.jpg
+            background=story/landscape-plain.webp
         [/part]
     [/story]
 
