--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -9,11 +9,11 @@
     [story]
         [part]
             {SCENARIO_02A_STORY_01}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
         [part]
             {SCENARIO_02A_STORY_02}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
     [/story]
 
