--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -17,15 +17,15 @@
     [story]
         [part]
             {SCENARIO_02B_STORY_01}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
         [part]
             {SCENARIO_02B_STORY_02}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
         [part]
             {SCENARIO_02B_STORY_03}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
     [/story]
 
