--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -17,15 +17,15 @@
     [story]
         [part]
             {SCENARIO_03_STORY_01}
-            background=story/swamp-01.jpg
+            background=story/swamp-01.webp
         [/part]
         [part]
             {SCENARIO_03_STORY_02}
-            background=story/swamp-01.jpg
+            background=story/swamp-01.webp
         [/part]
         [part]
             {SCENARIO_03_STORY_03}
-            background=story/swamp-01.jpg
+            background=story/swamp-01.webp
         [/part]
     [/story]
 
