--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -19,7 +19,7 @@
     [story]
         [part]
             {SCENARIO_04_STORY_01}
-            background=story/landscape-mountains-03.jpg
+            background=story/landscape-mountains-03.webp
         [/part]
     [/story]
 
