--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -17,7 +17,7 @@
     [story]
         [part]
             {SCENARIO_05_STORY_01}
-            background=story/landscape-coast.jpg
+            background=story/landscape-coast.webp
         [/part]
     [/story]
 
