--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -17,15 +17,15 @@
     [story]
         [part]
             {SCENARIO_06_STORY_01}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
         [part]
             {SCENARIO_06_STORY_02}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
         [part]
             {SCENARIO_06_STORY_03}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
     [/story]
 
