--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -27,19 +27,19 @@
     [story]
         [part]
             {EPILOGUE_STORY_01}
-            background=story/landscape-battlefield.jpg
+            background=story/landscape-battlefield.webp
         [/part]
     [/story]
     [story]
         [part]
             {EPILOGUE_STORY_02}
-            background=story/landscape-plain.jpg
+            background=story/landscape-plain.webp
         [/part]
     [/story]
     [story]
         [part]
             {EPILOGUE_STORY_03}
-            background=story/landscape-castle.jpg
+            background=story/landscape-castle.webp
         [/part]
     [/story]
 
