--- a/units/Great_Ogre.cfg
+++ b/units/Great_Ogre.cfg
@@ -11,8 +11,8 @@
         arcane=80
     [/resistance]
     movement=5
-    small_profile="portraits/monsters/ogre.png~SCALE(205,205)"
-    profile="portraits/monsters/ogre.png"
+    small_profile="portraits/monsters/ogre.webp~SCALE(205,205)"
+    profile="portraits/monsters/ogre.webp"
     experience=120
     level=3
     alignment=neutral
