--- a/units/Naga_Guardian.cfg
+++ b/units/Naga_Guardian.cfg
@@ -4,7 +4,7 @@
     id=Naga Guardian
     name= _ "Naga Guardian"
     race=naga
-    image="units/nagas/guardian.png"
+    image="units/nagas/guardian/guardian.png"
     hitpoints=38
     movement_type=naga
     movement=5
@@ -24,7 +24,7 @@
     [defend]
         start_time=-200
         [frame]
-            image="units/nagas/guardian-defend-[1~5,4~1].png:[50*8,25]"
+            image="units/nagas/guardian/guardian-defend-[1~5,4~1].png:[50*8,25]"
         [/frame]
         sound_start_time=-50
         [if]
@@ -47,7 +47,7 @@
             name=mace
         [/filter_attack]
         [frame]
-            image="units/nagas/guardian.png:200"
+            image="units/nagas/guardian/guardian.png:200"
         [/frame]
         {SOUND:HIT_AND_MISS mace.wav {SOUND_LIST:MISS} -100}
     [/attack_anim]
