--- a/units/City_Militia.cfg
+++ b/units/City_Militia.cfg
@@ -7,7 +7,7 @@
     race=human
     image="units/humans/city-militia.png"
     ellipse="misc/ellipse"
-    profile="portraits/humans/spearman.png"
+    profile="portraits/humans/spearman.webp"
 
     hitpoints=32
     movement_type=smallfoot
