--- a/units/Naga_Sentinel.cfg
+++ b/units/Naga_Sentinel.cfg
@@ -4,7 +4,7 @@
     id=Naga Sentinel
     name= _ "Naga Sentinel"
     race=naga
-    image="units/nagas/sentinel.png"
+    image="units/nagas/guardian/sentinel.png"
     hitpoints=55
     movement_type=naga
     movement=6
@@ -21,7 +21,7 @@
     cost=100
     usage=fighter
     description= _ "The heavy fighters are the elite guards of the naga. They are slower and more heavily armored than most naga and wield huge maces which they use to crush their enemies. They mostly guard naga outposts, but occasionally participate in offensive raids."
-    {DEFENSE_ANIM "units/nagas/sentinel.png" "units/nagas/sentinel.png" {SOUND_LIST:NAGA_HIT} }
+    {DEFENSE_ANIM "units/nagas/guardian/sentinel.png" "units/nagas/guardian/sentinel.png" {SOUND_LIST:NAGA_HIT} }
     die_sound=naga-die.ogg
     [attack]
         name=mace
@@ -36,7 +36,7 @@
             name=mace
         [/filter_attack]
         [frame]
-            image="units/nagas/sentinel.png:200"
+            image="units/nagas/guardian/sentinel.png:200"
         [/frame]
         {SOUND:HIT_AND_MISS mace.wav {SOUND_LIST:MISS} -100}
     [/attack_anim]
