--- a/units/Naga_Warden.cfg
+++ b/units/Naga_Warden.cfg
@@ -4,7 +4,7 @@
     id=Naga Warden
     name= _ "Naga Warden"
     race=naga
-    image="units/nagas/warden.png"
+    image="units/nagas/guardian/warden.png"
     hitpoints=50
     movement_type=naga
     movement=5
@@ -20,7 +20,7 @@
     cost=48
     usage=fighter
     description= _ "These heavy fighters are the elite guards of the naga. They are slower and more heavily armored than most naga and wield huge maces which they use to crush their enemies. They mostly guard naga outposts, but occasionally participate in offensive raids."
-    {DEFENSE_ANIM "units/nagas/warden.png" "units/nagas/warden.png" {SOUND_LIST:NAGA_HIT} }
+    {DEFENSE_ANIM "units/nagas/guardian/warden.png" "units/nagas/guardian/warden.png" {SOUND_LIST:NAGA_HIT} }
     die_sound=naga-die.ogg
     [attack]
         name=mace
@@ -35,7 +35,7 @@
             name=mace
         [/filter_attack]
         [frame]
-            image="units/nagas/warden.png:200"
+            image="units/nagas/guardian/warden.png:200"
         [/frame]
         {SOUND:HIT_AND_MISS mace.wav {SOUND_LIST:MISS} -100}
     [/attack_anim]
