update stun ability
avoid having it conflict with mainline's

--- a/utils/ALA_specials.cfg
+++ b/utils/ALA_specials.cfg
@@ -1,14 +1,14 @@
 #textdomain wesnoth-ala
 
-#define SPECIAL_NOTES_STUN
-_ " This unit is able to stun its enemies, disrupting their zones of control."#enddef
-
-#define WEAPON_SPECIAL_STUN
+#define WEAPON_SPECIAL_TAIL_STUN
+    # Canned definition of the Tail Stun ability to be included in a
+    # [specials] clause.
     [damage]
         id=tail_stun
-        name= _ "stun"
+        name= _ "tail stun"
         #po: the "stun" ability is also in some mainline campaigns, I think; try to keep the translation string similar:
         description= _ "This attack hits so hard that the opponent is dazed and can no longer enforce a zone of control. The effect wears off on the opponent’s next turn."
+        special_note=_ " This unit is able to stun its enemies, disrupting their zones of control."
         multiply=1
     [/damage]
 #enddef
