--- a/units/Brawler.cfg
+++ b/units/Brawler.cfg
@@ -35,7 +35,7 @@
         damage=9
         number=2
         [specials]
-            {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_TAIL_STUN}
         [/specials]
     [/attack]
     [attack_anim]
