--- a/_main.cfg
+++ b/_main.cfg
@@ -42,7 +42,7 @@
     [/difficulty]
 
     # wmllint: general spellings Wesnothian merfolk undead gryphon gryphons Italian Czech Naga Nagas dwarves saurians
-    # wmllint: directory spellings Glauco Geobard Mimord Nereids Estmark Wetspot Urca
+    # wmllint: directory spellings Glauco Geobard Mimord Nereids Estmark Wetspot Urca n°
     #po: the "young Wesnothian army officer" is Glauco (male); the "he" refers to him:
     description= _ "A young Wesnothian army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly he will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
 	
