--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -59,6 +59,7 @@
         [objectives]
             side=1
             [objective]
+                # wmllint: local spelling waypoint
                 description= _ "Glauco reaches the waypoint (marked by a monolith) over the mountains"
                 condition=win
             [/objective]
