--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -33,6 +33,7 @@
         [/filter]
         [message]
             speaker=Geobard
+            # wmllint: local spelling di
             #po: "di" is short for "die"
             message= _ "Aah! I've come so... far... only... to di..."
         [/message]
