--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -257,8 +257,9 @@
     [/message]
     [message]
         speaker=Glauco
-        #po: a "corvee" is when laborers do unpaid work for one specific task:
-        message= _ "You've got that right, Geobard, this plain is completely bare; but look to the forest to our right! Organize a corvee that takes logs from it to build a fence here."
+        # wmllint: local spelling corvée
+        #po: a "corvée" is when laborers do unpaid work for one specific task:
+        message= _ "You've got that right, Geobard, this plain is completely bare; but look to the forest to our right! Organize a corvée that takes logs from it to build a fence here."
     [/message]
     [message]
         speaker=Geobard
@@ -374,6 +375,7 @@
     {SCROLL_AND_DELAY 23 21 1000}
     [message]
         speaker=Glauco
+        # wmllint: local spelling Mmmh
         message= _ "We could bypass them, but my project for the new Amber Path requires the river to be free! Mmmh... Rather, isn't it strange that Ogres are allies with Nagas? I know little about both the races, it's true, but a little bird told me that the Nagas are allied only with the reptiles and offer them precious metals in exchange for their help, and this excludes the ogres, who never possess precious objects."
     [/message]
     {SCOUT_MESSAGE ( _ "And who said they were allies? Isn't it said that the dove is nestling near the falcon's nest? I know well all the beings living in the wilderness of the east, and I can assure you that an Ogre would only invite a Naga to dinner to make it their first course. If they live so close it must be such a case; probably the Nagas have arrived going up the river and have found the ogres here; because they occupy different spaces they have not given too much discomfort to each other.")}
@@ -473,6 +475,7 @@
     [/message]
     [message]
         speaker=Glauco
+        # wmllint: local spelling Beh
         #po: "Beh" is just a sound, but I suppose it could also be a portmanteau of
         #po: "Bah" (sound of dismissal/frustration) and "Meh" (sound of indifference/uncaringness):
         message= _ "Beh, I suppose that can be acceptable in this way! Glad to have you with us, Glubtrub, your strength will be useful to us!"
@@ -515,7 +518,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "My name is Glauco! I'm the commander of the Amoran's garrison, and I'm trying to reach the nereid's bay at the mouth of the Amber River! And who would you be? I thought all the dwarves had left these hills."
+        message= _ "My name is Glauco! I'm the commander of the Amoran's garrison, and I'm trying to reach the nereids' bay at the mouth of the Amber River! And who would you be? I thought all the dwarves had left these hills."
     [/message]
     [message]
         speaker=Mimord
@@ -523,6 +526,7 @@
     [/message]
     [message]
         speaker=Glauco
+        # wmllint: local spelling Ehm
         message= _ "Ehm... Beh... We're sorry to have bothered you, but as you can see, we already have our troubles and we don't want to have other troubles with you! So, excuse us again, and have a good stay."
     [/message]
     [message]
@@ -535,8 +539,8 @@
     [/message]
     [message]
         speaker=Mimord
-        #po: "By my sister's moustache" is another humorous dwarvish idiom meant to signify the swearing of an oath:
-        message= _ "By my sister's moustache, that is a truly ridiculous statement, commander Glauco, from the mouth of someone who wants to cross these territories! Do you know what I tell you? You have won, I'll come with you for free; I am bored to death here."
+        #po: "By my sister's mustache" is another humorous dwarvish idiom meant to signify the swearing of an oath:
+        message= _ "By my sister's mustache, that is a truly ridiculous statement, commander Glauco, from the mouth of someone who wants to cross these territories! Do you know what I tell you? You have won, I'll come with you for free; I am bored to death here."
     [/message]
     {SCOUT_MESSAGE ( _ "The dwarf is not all wrong! In my opinion it will do more good than bad if he comes with us! Although we should almost be near at the sea, we don't know what we'll find again, and then... there is always the return to Amoran.")}
     [message]
