--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -25,6 +25,7 @@ Then a caravan route was established, a path which followed, more or less, the c
 #enddef
 
 #define SCENARIO_01_STORY_03
+    # wmllint: local spelling dignifiedly
     #po: I don't think "dignifiedly" is an actual word, but I know what he means and can't think of any better word to use, so it can stay for now:
     story=_ "Wesnoth's nobles and rich grew tired of amber, and for their own delight, the vanity of their kind consorts, and the pleasure of their keen lovers, they began to prefer the multi-colored precious stones that the dwarves pulled out of their mountains, and that were gotten more easily and with fewer vicissitudes than the amber coming into their hands.
 With the decline, and finally the cessation, of the traffic of the amber, Amoran also declined, as slowly and dignifiedly as an old lady. The population gradually decreased, the trades ended, the stone walls became too expensive to maintain, and where they collapsed they were replaced by wooden palisades. The garrison, once numerous, was reduced to a handful of soldiers, carefully chosen among those who, for lack of money and of rank, had fewer means to oppose the assignment of such a disagreeable destination. The cultivated fields became the only source of wealth of the inhabitants, and there was a thinning-out of the coins in circulation, and also the merchants thinned out.
