S02B: give player a bit more defense at the start

--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -60,6 +60,9 @@
         user_team_name= _ "Orcs"
         color=green
         {FLAG_VARIANT6 ragged}
+        [ai]
+            leader_value={ON_DIFFICULTY 1 3 5} # default: 3
+        [/ai]
     [/side]
     {STARTING_VILLAGES_AREA 2 26 2 7}
 
@@ -180,6 +183,14 @@
         {MODIFY_TERRAIN Ce 16 20}
         {MODIFY_TERRAIN Re^Vct 11 19}
         [redraw][/redraw]
+#ifdef EASY
+        {MOVE_UNIT id=Glauco 11 26}
+        {MODIFY_TERRAIN Gll^Fdw 11 26}
+        [redraw][/redraw]
+        {MOVE_UNIT id=Glauco 13 19}
+        {MODIFY_TERRAIN Ke 13 19}
+        [redraw][/redraw]
+#endif
         [end_turn]
         [/end_turn]
     [/event]
