--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -54,7 +54,7 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #define SCENARIO_02B_STORY_01
     # wmllint: general spellings orcish
     #po: TODO: check "sergeant" usage:
-    story=_ "With Dadoc's gang out of the games, and emboldened by the victory obtained and by his new commander prerogatives, Glauco decided to face at least one of others Amoran's problems, that's to say Grunto the orc; as Grunto was not a member of the tribes associated with the Northern Alliance, it would be unlikely that other orcish chiefs would help him, especially now that he had already been defeated in the previous battle, and therefore he saw his reputation finish, as it's called among the orcs, in a troll latrine. However, emboldening had not meant that he had become stupid, for the young sergeant. A campaign in hostile territory, against forces with only partly-known numbers, was, however, risky and full of unknowns."
+    story=_ "With Dadoc's gang out of the games, and emboldened by the victory he had obtained, and by his new prerogatives as commander, Glauco decided to face at least one of others Amoran's problems, which is to say, Grunto the orc. Since Grunto was not a member of the tribes associated with the Northern Alliance, it would be unlikely that other orcish chiefs would help him, especially now that he had already been defeated in the previous battle, and therefore he saw his reputation decline, as they say among the orcs, into a troll latrine. However, emboldening had not meant that he had become stupid, for the young sergeant. A campaign in hostile territory, against forces with only partly-known numbers, was, however, risky and full of unknowns."
 #enddef
 
 #define SCENARIO_02B_STORY_02
