some images were showing as missing

--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -315,6 +315,7 @@
             gender=female
             message=_"Yes! Squash skull of snake! Is time!"
         [/message]
+        [redraw][/redraw]
     [/event]
 
     [event]
