S03: add extra village on EASY

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -362,6 +362,7 @@
 #define 03_INTRODUCTION_DIALOGUE
     {MOVE_UNIT (id=Divaid,Croquet) 15 10}
     {DELAY 1000}
+    {MOVE_UNIT (id=Divaid,Croquet) 17 13}
     {MOVE_UNIT (id=Divaid,Croquet) 18 17}
     {DELAY 1000}
     {MOVE_UNIT (id=Divaid,Croquet) 8 13}
