--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -63,6 +63,7 @@
         [ai]
             grouping=no
             passive_leader=no
+            leader_value={ON_DIFFICULTY 1 3 5} # default: 3
             [goal]
                 name=protect_unit
                 [criteria]
@@ -180,6 +181,9 @@
         {PLACE_IMAGE "scenery/mine-abandoned.png" 23 20}
         {PLACE_IMAGE "scenery/mine-abandoned.png" 22 21}
         {PLACE_IMAGE "scenery/castle-ruins.png" 22 20}
+#ifdef EASY
+        {MODIFY_TERRAIN Gg^Vc 15 14}
+#endif
     [/event]
 
     [event]
