minor dialogue update

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -391,7 +391,7 @@
                         [message]
                             # wmllint: recognize Divaid
                             speaker=Divaid
-                            message= _ "Don't you dare to touch my friend Ranfy, tattooed midget!"
+                            message= _ "Don't you dare try to touch my friend Ranfy, you tattooed midget!"
                         [/message]
                     [/then]
                     [else]
