--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -531,8 +531,11 @@
         [/kill]
         [if]
             [have_unit]
-                # wmllint: recognize Hisskiss
-                id=Hisskiss
+                id=Hisskss
+                [or]
+                    # wmllint: recognize Hisskiss
+                    id=Hisskiss
+                [/or]
             [/have_unit]
             [then]
                 [message]
